data/derived/fa15/progs/unify/prog0949.ml.out
Characters 58-59:
  if (explode w) = (explode (listReverse w))
                                         ^
Error: This expression has type string but an expression was expected of type
         'a list
